--- a/vector/src/main/AndroidManifest.xml
+++ b/vector/src/main/AndroidManifest.xml
@@ -90,6 +90,7 @@
         <!-- Activity alias for the launcher Activity (must be declared after the Activity it targets) -->
         <activity-alias
             android:name=".features.Alias"
+            android:exported="true"
             android:targetActivity=".features.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -102,11 +103,14 @@
                 android:resource="@xml/shortcuts" />
         </activity-alias>
 
-        <activity android:name=".features.home.HomeActivity" />
+        <activity
+            android:name=".features.home.HomeActivity"
+            android:exported="false"/>
         <activity
             android:name=".features.login.LoginActivity"
-            android:launchMode="singleTask"
             android:enabled="@bool/useLoginV1"
+            android:exported="true"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize">
             <!-- Add intent filter to handle redirection URL after SSO login in external browser -->
             <intent-filter>
@@ -122,8 +126,9 @@
         </activity>
         <activity
             android:name=".features.login2.LoginActivity2"
-            android:launchMode="singleTask"
             android:enabled="@bool/useLoginV2"
+            android:exported="true"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize">
             <!-- Add intent filter to handle redirection URL after SSO login in external browser -->
             <intent-filter>
@@ -141,46 +146,74 @@
         <!-- Add tools:ignore="Instantiatable" for the error reported only by Buildkite :/ -->
         <activity
             android:name=".features.media.VectorAttachmentViewerActivity"
+            android:exported="false"
             android:theme="@style/Theme.Vector.Black.Transparent"
             tools:ignore="Instantiatable" />
 
-        <activity android:name=".features.media.BigImageViewerActivity" />
+        <activity
+            android:name=".features.media.BigImageViewerActivity"
+            android:exported="false" />
         <activity
             android:name=".features.rageshake.BugReportActivity"
+            android:exported="false"
             android:label="@string/title_activity_bug_report" />
         <activity
             android:name=".features.settings.VectorSettingsActivity"
+            android:exported="false"
             android:label="@string/title_activity_settings"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".features.crypto.keysbackup.restore.KeysBackupRestoreActivity"
+            android:exported="false"
             android:label="@string/title_activity_keys_backup_setup" />
         <activity
             android:name=".features.crypto.keysbackup.setup.KeysBackupSetupActivity"
+            android:exported="false"
             android:label="@string/title_activity_keys_backup_restore" />
         <activity
             android:name=".features.crypto.keysbackup.settings.KeysBackupManageActivity"
+            android:exported="false"
             android:label="@string/encryption_message_recovery" />
 
         <activity
             android:name=".features.reactions.EmojiReactionPickerActivity"
+            android:exported="false"
             android:label="@string/title_activity_emoji_reaction_picker" />
-        <activity android:name=".features.roomdirectory.createroom.CreateRoomActivity" />
-        <activity android:name=".features.roomdirectory.RoomDirectoryActivity" />
-        <activity android:name=".features.roomdirectory.roompreview.RoomPreviewActivity" />
-        <activity android:name=".features.home.room.filtered.FilteredRoomsActivity" />
+        <activity
+            android:name=".features.roomdirectory.createroom.CreateRoomActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.roomdirectory.RoomDirectoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.roomdirectory.roompreview.RoomPreviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".features.home.room.filtered.FilteredRoomsActivity"
+            android:exported="false" />
         <activity
             android:name=".features.home.room.detail.RoomDetailActivity"
+            android:exported="false"
             android:parentActivityName=".features.home.HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".features.home.HomeActivity" />
         </activity>
-        <activity android:name=".features.debug.DebugMenuActivity" />
-        <activity android:name=".features.createdirect.CreateDirectRoomActivity" />
-        <activity android:name=".features.invite.InviteUsersToRoomActivity" />
-        <activity android:name=".features.webview.VectorWebViewActivity" />
-        <activity android:name=".features.link.LinkHandlerActivity">
+        <activity
+            android:name=".features.debug.DebugMenuActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.createdirect.CreateDirectRoomActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.invite.InviteUsersToRoomActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.webview.VectorWebViewActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.link.LinkHandlerActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -198,7 +231,8 @@
 
         <activity
             android:name=".features.share.IncomingShareActivity"
-            android:parentActivityName=".features.home.HomeActivity">
+            android:parentActivityName=".features.home.HomeActivity"
+            android:exported="true">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".features.home.HomeActivity" />
@@ -213,7 +247,6 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEND_MULTIPLE" />
                 <data android:mimeType="*/*" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
             </intent-filter>
@@ -223,16 +256,24 @@
                 android:value="androidx.sharetarget.ChooserTargetServiceCompat" />
         </activity>
 
-        <activity android:name=".features.roomprofile.RoomProfileActivity" />
-        <activity android:name=".features.roomprofile.settings.joinrule.RoomJoinRuleActivity" />
+        <activity
+            android:name=".features.roomprofile.RoomProfileActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.roomprofile.settings.joinrule.RoomJoinRuleActivity"
+            android:exported="false"/>
 
-        <activity android:name=".features.signout.hard.SignedOutActivity" />
+        <activity
+            android:name=".features.signout.hard.SignedOutActivity"
+            android:exported="false"/>
         <activity
             android:name=".features.signout.soft.SoftLogoutActivity"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize"
+            android:exported="false"/>
         <activity
             android:name=".features.permalink.PermalinkHandlerActivity"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -254,42 +295,63 @@
 
         <activity
             android:name=".features.roommemberprofile.RoomMemberProfileActivity"
-            android:parentActivityName=".features.home.HomeActivity">
+            android:parentActivityName=".features.home.HomeActivity"
+            android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".features.home.HomeActivity" />
         </activity>
 
-        <activity android:name=".features.qrcode.QrCodeScannerActivity" />
+        <activity
+            android:name=".features.qrcode.QrCodeScannerActivity"
+            android:exported="false"/>
 
-        <activity android:name=".features.crypto.quads.SharedSecureStorageActivity" />
+        <activity
+            android:name=".features.crypto.quads.SharedSecureStorageActivity"
+            android:exported="false"/>
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false"/>
 
         <activity
             android:name=".features.attachments.preview.AttachmentsPreviewActivity"
-            android:theme="@style/Theme.Vector.Black.AttachmentsPreview" />
+            android:theme="@style/Theme.Vector.Black.AttachmentsPreview"
+            android:exported="false"/>
         <activity
-            android:supportsPictureInPicture="true"
-            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
             android:name=".features.call.VectorCallActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
+            android:excludeFromRecents="true"
             android:launchMode="singleTask"
+            android:supportsPictureInPicture="true"
             android:taskAffinity=".features.call.VectorCallActivity"
-            android:excludeFromRecents="true" />
+            android:exported="false"/>
         <!-- PIP Support https://developer.android.com/guide/topics/ui/picture-in-picture -->
         <activity
             android:name=".features.call.conference.VectorJitsiActivity"
             android:configChanges="orientation|smallestScreenSize|screenLayout|screenSize"
             android:launchMode="singleTask"
-            android:supportsPictureInPicture="true" />
+            android:supportsPictureInPicture="true"
+            android:exported="false"/>
 
-        <activity android:name=".features.terms.ReviewTermsActivity" />
-        <activity android:name=".features.widgets.WidgetActivity" />
-        <activity android:name=".features.pin.PinActivity" />
-        <activity android:name=".features.home.room.detail.search.SearchActivity" />
-        <activity android:name=".features.usercode.UserCodeActivity" />
-        <activity android:name=".features.call.transfer.CallTransferActivity" />
+        <activity
+            android:name=".features.terms.ReviewTermsActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.widgets.WidgetActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.pin.PinActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.home.room.detail.search.SearchActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.usercode.UserCodeActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.call.transfer.CallTransferActivity"
+            android:exported="false"/>
 
         <!-- Single instance is very important for the custom scheme callback-->
         <activity
@@ -313,12 +375,24 @@
             <!--            </intent-filter>-->
         </activity>
 
-        <activity android:name=".features.devtools.RoomDevToolActivity" />
-        <activity android:name=".features.spaces.SpacePreviewActivity" />
-        <activity android:name=".features.spaces.SpaceExploreActivity" />
-        <activity android:name=".features.spaces.SpaceCreationActivity" />
-        <activity android:name=".features.spaces.manage.SpaceManageActivity" />
-        <activity android:name=".features.spaces.people.SpacePeopleActivity" />
+        <activity
+            android:name=".features.devtools.RoomDevToolActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.spaces.SpacePreviewActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.spaces.SpaceExploreActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.spaces.SpaceCreationActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.spaces.manage.SpaceManageActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".features.spaces.people.SpacePeopleActivity"
+            android:exported="false"/>
         <!-- Services -->
 
         <service
@@ -338,7 +412,8 @@
 
         <service
             android:name=".features.call.telecom.VectorConnectionService"
-            android:permission="android.permission.BIND_TELECOM_CONNECTION_SERVICE">
+            android:permission="android.permission.BIND_TELECOM_CONNECTION_SERVICE"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.telecom.ConnectionService" />
             </intent-filter>
@@ -364,7 +439,9 @@
         A media button receiver receives and helps translate hardware media playback buttons,
         such as those found on wired and wireless headsets, into the appropriate callbacks in your app.
            -->
-        <receiver android:name="androidx.media.session.MediaButtonReceiver">
+        <receiver
+            android:name="androidx.media.session.MediaButtonReceiver"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
@@ -376,6 +453,7 @@
         <provider
             android:name="androidx.work.impl.WorkManagerInitializer"
             android:authorities="${applicationId}.workmanager-init"
+            android:exported="false"
             tools:node="remove" />
 
         <provider
