Enhance dependencies handling to support Dependabot

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ android.useAndroidX=true
 
 #Project Settings
 # Change debugPrivateData to true for debugging
-vector.debugPrivateData=false
+vector.debugPrivateData=true
 # httpLogLevel values: NONE, BASIC, HEADERS, BODY
-vector.httpLogLevel=BASIC
+vector.httpLogLevel=BODY
 
