--- a/vector/src/main/AndroidManifest.xml
+++ b/vector/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="im.vector.app">
 
+    <!--
+    Warning: If an activity, service, or broadcast receiver uses intent filters and doesn't have an
+    explicitly-declared value for android:exported, your app can't be installed on a device that runs Android 12.
+    -->
+
     <!-- Needed for VOIP call to detect and switch to headset-->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -103,9 +108,8 @@
                 android:resource="@xml/shortcuts" />
         </activity-alias>
 
-        <activity
-            android:name=".features.home.HomeActivity"
-            android:exported="false"/>
+        <activity android:name=".features.home.HomeActivity"/>
+
         <activity
             android:name=".features.login.LoginActivity"
             android:enabled="@bool/useLoginV1"
@@ -146,80 +150,59 @@
         <!-- Add tools:ignore="Instantiatable" for the error reported only by Buildkite :/ -->
         <activity
             android:name=".features.media.VectorAttachmentViewerActivity"
-            android:exported="false"
             android:theme="@style/Theme.Vector.Black.Transparent"
             tools:ignore="Instantiatable" />
-
         <activity
-            android:name=".features.media.BigImageViewerActivity"
-            android:exported="false" />
+            android:name=".features.media.BigImageViewerActivity" />
         <activity
             android:name=".features.rageshake.BugReportActivity"
-            android:exported="false"
             android:label="@string/title_activity_bug_report" />
         <activity
             android:name=".features.settings.VectorSettingsActivity"
-            android:exported="false"
             android:label="@string/title_activity_settings"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".features.crypto.keysbackup.restore.KeysBackupRestoreActivity"
-            android:exported="false"
             android:label="@string/title_activity_keys_backup_setup" />
         <activity
             android:name=".features.crypto.keysbackup.setup.KeysBackupSetupActivity"
-            android:exported="false"
             android:label="@string/title_activity_keys_backup_restore" />
         <activity
             android:name=".features.crypto.keysbackup.settings.KeysBackupManageActivity"
-            android:exported="false"
             android:label="@string/encryption_message_recovery" />
-
         <activity
             android:name=".features.reactions.EmojiReactionPickerActivity"
-            android:exported="false"
             android:label="@string/title_activity_emoji_reaction_picker" />
         <activity
-            android:name=".features.roomdirectory.createroom.CreateRoomActivity"
-            android:exported="false" />
+            android:name=".features.roomdirectory.createroom.CreateRoomActivity"/>
         <activity
-            android:name=".features.roomdirectory.RoomDirectoryActivity"
-            android:exported="false" />
+            android:name=".features.roomdirectory.RoomDirectoryActivity" />
         <activity
-            android:name=".features.roomdirectory.roompreview.RoomPreviewActivity"
-            android:exported="false" />
+            android:name=".features.roomdirectory.roompreview.RoomPreviewActivity" />
         <activity
-            android:name=".features.home.room.filtered.FilteredRoomsActivity"
-            android:exported="false" />
+            android:name=".features.home.room.filtered.FilteredRoomsActivity"/>
         <activity
             android:name=".features.home.room.detail.RoomDetailActivity"
-            android:exported="false"
             android:parentActivityName=".features.home.HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".features.home.HomeActivity" />
         </activity>
         <activity
-            android:name=".features.debug.DebugMenuActivity"
-            android:exported="false"/>
+            android:name=".features.debug.DebugMenuActivity"/>
         <activity
-            android:name=".features.createdirect.CreateDirectRoomActivity"
-            android:exported="false"/>
+            android:name=".features.createdirect.CreateDirectRoomActivity"/>
         <activity
-            android:name=".features.invite.InviteUsersToRoomActivity"
-            android:exported="false"/>
+            android:name=".features.invite.InviteUsersToRoomActivity"/>
         <activity
-            android:name=".features.webview.VectorWebViewActivity"
-            android:exported="false"/>
+            android:name=".features.webview.VectorWebViewActivity"/>
         <activity
             android:name=".features.link.LinkHandlerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
                 <data android:scheme="https" />
                 <data android:host="riot.im" />
                 <data android:host="app.element.io" />
@@ -228,7 +211,6 @@
                 <data android:host="staging.element.io" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".features.share.IncomingShareActivity"
             android:parentActivityName=".features.home.HomeActivity"
@@ -250,26 +232,19 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
             </intent-filter>
-
             <meta-data
                 android:name="android.service.chooser.chooser_target_service"
                 android:value="androidx.sharetarget.ChooserTargetServiceCompat" />
         </activity>
-
         <activity
-            android:name=".features.roomprofile.RoomProfileActivity"
-            android:exported="false"/>
+            android:name=".features.roomprofile.RoomProfileActivity"/>
         <activity
-            android:name=".features.roomprofile.settings.joinrule.RoomJoinRuleActivity"
-            android:exported="false"/>
-
+            android:name=".features.roomprofile.settings.joinrule.RoomJoinRuleActivity"/>
         <activity
-            android:name=".features.signout.hard.SignedOutActivity"
-            android:exported="false"/>
+            android:name=".features.signout.hard.SignedOutActivity"/>
         <activity
             android:name=".features.signout.soft.SoftLogoutActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="false"/>
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".features.permalink.PermalinkHandlerActivity"
             android:launchMode="singleTask"
@@ -295,68 +270,52 @@
 
         <activity
             android:name=".features.roommemberprofile.RoomMemberProfileActivity"
-            android:parentActivityName=".features.home.HomeActivity"
-            android:exported="false">
+            android:parentActivityName=".features.home.HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".features.home.HomeActivity" />
         </activity>
 
         <activity
-            android:name=".features.qrcode.QrCodeScannerActivity"
-            android:exported="false"/>
-
+            android:name=".features.qrcode.QrCodeScannerActivity"/>
         <activity
-            android:name=".features.crypto.quads.SharedSecureStorageActivity"
-            android:exported="false"/>
+            android:name=".features.crypto.quads.SharedSecureStorageActivity"/>
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
-            android:screenOrientation="portrait"
-            android:exported="false"/>
-
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".features.attachments.preview.AttachmentsPreviewActivity"
-            android:theme="@style/Theme.Vector.Black.AttachmentsPreview"
-            android:exported="false"/>
+            android:theme="@style/Theme.Vector.Black.AttachmentsPreview"/>
         <activity
             android:name=".features.call.VectorCallActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
             android:excludeFromRecents="true"
             android:launchMode="singleTask"
             android:supportsPictureInPicture="true"
-            android:taskAffinity=".features.call.VectorCallActivity"
-            android:exported="false"/>
+            android:taskAffinity=".features.call.VectorCallActivity"/>
         <!-- PIP Support https://developer.android.com/guide/topics/ui/picture-in-picture -->
         <activity
             android:name=".features.call.conference.VectorJitsiActivity"
             android:configChanges="orientation|smallestScreenSize|screenLayout|screenSize"
             android:launchMode="singleTask"
-            android:supportsPictureInPicture="true"
-            android:exported="false"/>
+            android:supportsPictureInPicture="true"/>
 
         <activity
-            android:name=".features.terms.ReviewTermsActivity"
-            android:exported="false"/>
+            android:name=".features.terms.ReviewTermsActivity"/>
         <activity
-            android:name=".features.widgets.WidgetActivity"
-            android:exported="false"/>
+            android:name=".features.widgets.WidgetActivity"/>
         <activity
-            android:name=".features.pin.PinActivity"
-            android:exported="false"/>
+            android:name=".features.pin.PinActivity"/>
         <activity
-            android:name=".features.home.room.detail.search.SearchActivity"
-            android:exported="false"/>
+            android:name=".features.home.room.detail.search.SearchActivity" />
         <activity
-            android:name=".features.usercode.UserCodeActivity"
-            android:exported="false"/>
+            android:name=".features.usercode.UserCodeActivity"/>
         <activity
-            android:name=".features.call.transfer.CallTransferActivity"
-            android:exported="false"/>
+            android:name=".features.call.transfer.CallTransferActivity"/>
 
         <!-- Single instance is very important for the custom scheme callback-->
         <activity
             android:name=".features.auth.ReAuthActivity"
-            android:exported="false"
             android:launchMode="singleInstance">
 
             <!-- XXX: UIA SSO has only web fallback, i.e no url redirect, so for now we comment this out
@@ -376,25 +335,19 @@
         </activity>
 
         <activity
-            android:name=".features.devtools.RoomDevToolActivity"
-            android:exported="false"/>
+            android:name=".features.devtools.RoomDevToolActivity"/>
         <activity
-            android:name=".features.spaces.SpacePreviewActivity"
-            android:exported="false"/>
+            android:name=".features.spaces.SpacePreviewActivity"/>
         <activity
-            android:name=".features.spaces.SpaceExploreActivity"
-            android:exported="false"/>
+            android:name=".features.spaces.SpaceExploreActivity"/>
         <activity
-            android:name=".features.spaces.SpaceCreationActivity"
-            android:exported="false"/>
+            android:name=".features.spaces.SpaceCreationActivity"/>
         <activity
-            android:name=".features.spaces.manage.SpaceManageActivity"
-            android:exported="false"/>
+            android:name=".features.spaces.manage.SpaceManageActivity"/>
         <activity
-            android:name=".features.spaces.people.SpacePeopleActivity"
-            android:exported="false"/>
-        <activity android:name=".features.spaces.leave.SpaceLeaveAdvancedActivity"
-            android:exported="false"/>
+            android:name=".features.spaces.people.SpacePeopleActivity"/>
+        <activity
+            android:name=".features.spaces.leave.SpaceLeaveAdvancedActivity"/>
 
       <!-- Services -->
 
@@ -410,7 +363,6 @@
         <!-- Add tools:ignore="Instantiatable" for the error reported only by Buildkite and for lintGplayRelease check :/ -->
         <service
             android:name=".core.services.VectorSyncService"
-            android:exported="false"
             tools:ignore="Instantiatable" />
 
         <service
@@ -425,18 +377,15 @@
         <!-- Receivers -->
 
         <receiver
-            android:name=".features.call.service.CallHeadsUpActionReceiver"
-            android:exported="false" />
+            android:name=".features.call.service.CallHeadsUpActionReceiver" />
 
         <receiver
-            android:name=".features.settings.troubleshoot.TestNotificationReceiver"
-            android:exported="false" />
+            android:name=".features.settings.troubleshoot.TestNotificationReceiver" />
 
         <!-- Exported false, should only be accessible from this app!! -->
         <receiver
             android:name=".features.notifications.NotificationBroadcastReceiver"
-            android:enabled="true"
-            android:exported="false" />
+            android:enabled="true" />
 
         <!--
         A media button receiver receives and helps translate hardware media playback buttons,
@@ -456,13 +405,11 @@
         <provider
             android:name="androidx.work.impl.WorkManagerInitializer"
             android:authorities="${applicationId}.workmanager-init"
-            android:exported="false"
             tools:node="remove" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileProvider"
-            android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
