Restore missing lines in gradle.properties to speed up debugging

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,10 @@ android.useAndroidX=true
 
 #Project Settings
 # Change debugPrivateData to true for debugging
-vector.debugPrivateData=true
+vector.debugPrivateData=false
 # httpLogLevel values: NONE, BASIC, HEADERS, BODY
-vector.httpLogLevel=BODY
+vector.httpLogLevel=BASIC
 
+# Note: to debug, you can put and uncomment the following lines in the file ~/.gradle/gradle.properties to override the value above
+#vector.debugPrivateData=true
+#vector.httpLogLevel=BODY
